add seller logic
